fix blockquote padding on smaller screens

--- a/assets/css/_sass/base.scss
+++ b/assets/css/_sass/base.scss
@@ -20,7 +20,7 @@ html {
   font-size: 14px;
   overflow-y: scroll;
 
-  @media (min-width: 600px) {
+  @media (min-width: $on-small-screen) {
     font-size: 16px;
   }
 }
@@ -53,6 +53,10 @@ blockquote {
   color: $grey-1;
   margin: .5rem 1.25rem 0.5;
   padding: .1rem 1.5rem .1rem 1.5rem;
+
+  @media (min-width: $on-small-screen) {
+    padding: .1rem 1.5rem .1rem 1.5rem;
+  }
 
   p:last-child {
     margin-bottom: 0;
